# yolo-follower

./: .gitignore  README.md  exec.sh  run.sh
docker_ws/: Dockerfile.doom  build_doom.sh
ros_ws/: frames_2025-09-18_18.39.17.gv  my_rviz.rviz
ros_ws/install/doom_interfaces/share/doom_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/install/doom_interfaces/share/doom_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  doom_interfacesConfig-version.cmake  doom_interfacesConfig.cmake  rosidl_cmake-extras.cmake  (+13 more)
ros_ws/install/doom_nodes/lib/doom_nodes/: localizer  navigator  perceptor
ros_ws/install/doom_nodes/share/doom_nodes/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/log/: latest_build
ros_ws/src/doom_interfaces/: CMakeLists.txt
ros_ws/src/doom_interfaces/src/: CMakeLists.txt  package.xml
ros_ws/src/doom_nodes/: package.xml  setup.cfg  setup.py
ros_ws/src/doom_nodes/doom_nodes/: localization_node.py  navigation_node.py  perception_node.py
ros_ws/src/doom_nodes/launch/: doom_project.launch.py
ros_ws/src/turtlebot3/turtlebot3_navigation2/param/: waffle.yaml
ros_ws/src/turtlebot3_simulations/turtlebot3_gazebo/params/: turtlebot3_waffle_bridge.yaml
ros_ws/src/turtlebot3_simulations/turtlebot3_gazebo/worlds/: turtlebot3_world.world
(+33 files in other folders)
